--- a/playbook.yml
+++ b/playbook.yml
@@ -3,9 +3,10 @@
   vars_files: 
   - vars.yml
   become: yes
-  tasks:
-    - name: Install docker
-      package: 
+  tasks: 
+    - name: Install docker and dependencies
+      apt: 
+        update_cache: yes
         name:
         - docker.io
         - python3-pip 
